--- a/Day1/group3/style.css
+++ b/Day1/group3/style.css
@@ -23,10 +23,10 @@ h1 {
 }
 
 :not(h1) {
-    color: #ff0000;
+    color:darkblue;
 }
 
 div {
-    border:1px solid red;
+    border:1px solid darkblue;
     margin-top:300px;
 }
