combine html + css in day1-group3

--- a/Day1/group3/style.css
+++ b/Day1/group3/style.css
@@ -1,4 +1,6 @@
-h2 {
+/* All has been moved to html combined */
+
+/* h2 {
     border : 1px solid black ;
     margin: 1000px;
     margin-top: 40px;
@@ -29,4 +31,4 @@ h1 {
 div {
     border:1px solid darkblue;
     margin-top:300px;
-}
+} */
